Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
T
tracker-miners
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 47
    • Issues 47
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 14
    • Merge Requests 14
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • tracker-miners
  • Issues
  • #150

Closed
Open
Opened Oct 30, 2020 by Jonas Ådahl@jadahlDeveloper

tracker-extract keeps logging warnings hundred of times a second

$ rpm -qv tracker
tracker-2.3.6-1.fc33.x86_64
$ rpm -qv tracker3
tracker3-3.0.1-1.fc33.x86_64

The journal contains things like

Oct 29 19:37:43 shuben tracker-extract[18064]: g_compute_checksum_for_string: assertion 'length == 0 || str != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_get_child: assertion 'name != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_delete: assertion 'G_IS_FILE (file)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not delete '(null)' from failsafe persistence store
Oct 29 19:37:43 shuben tracker-extract[18064]: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Task for 'urn:bnode:88864b92-3d5d-4ca5-a97a-c22d6fca15de' finished with error: The specified location is not supported
Oct 29 19:37:43 shuben tracker-extract[18064]: g_compute_checksum_for_string: assertion 'length == 0 || str != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_get_child: assertion 'name != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_make_symbolic_link: assertion 'G_IS_FILE (file)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not save '(null)' into failsafe persistence store: no error given
Oct 29 19:37:43 shuben tracker-extract[18064]: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not get mimetype, The specified location is not supported
Oct 29 19:37:43 shuben tracker-extract[18064]: g_compute_checksum_for_string: assertion 'length == 0 || str != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_get_child: assertion 'name != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_delete: assertion 'G_IS_FILE (file)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not delete '(null)' from failsafe persistence store
Oct 29 19:37:43 shuben tracker-extract[18064]: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Task for 'urn:bnode:6bb95c55-635d-4648-8b4f-ff2b279f6962' finished with error: The specified location is not supported
Oct 29 19:37:43 shuben tracker-extract[18064]: g_compute_checksum_for_string: assertion 'length == 0 || str != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_get_child: assertion 'name != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_make_symbolic_link: assertion 'G_IS_FILE (file)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not save '(null)' into failsafe persistence store: no error given
Oct 29 19:37:43 shuben tracker-extract[18064]: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not get mimetype, The specified location is not supported
Oct 29 19:37:43 shuben tracker-extract[18064]: g_compute_checksum_for_string: assertion 'length == 0 || str != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_get_child: assertion 'name != NULL' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: g_file_delete: assertion 'G_IS_FILE (file)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Could not delete '(null)' from failsafe persistence store
Oct 29 19:37:43 shuben tracker-extract[18064]: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Oct 29 19:37:43 shuben tracker-extract[18064]: Task for 'urn:bnode:b5474052-0864-4bf7-981a-d9c1e09fe29b' finished with error: The specified location is not supported
$ ls -l /tmp/tracker-extract*
total 0
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/tracker-miners#150