libtracker-data: Issue fatal g_error() if next resource ID cannot be found

This breaks fundamental assumptions (e.g. that getting a next resource ID is
not failable), breaks even further if those resources don't get the specified
ID.

It is preferrable to hard error altogether, and let users report the
backtrace/error.

Related: https://gitlab.gnome.org/GNOME/tracker-miners/-/issues/150